thx2_results/results/softmax/sycl.log
~/repos/llvm/build/bin/clang++ -std=c++17 -Wall -fsycl --gcc-toolchain=/home/ga27mex2/spack_thx2/spack/opt/spack/linux-centos8-thunderx2/gcc-14.1.0/gcc-14.1.0-kl6fnbyj4mhv4v5emwvqi6nmxb4kvjae -fsycl-targets=nvptx64-nvidia-cuda -Xsycl-target-backend --cuda-gpu-arch=sm_70 -DUSE_GPU -DUSE_GPU -O3 -O3 -c main.cpp -o main.o
main.cpp:17:17: error: use of undeclared identifier 'expf'
   17 |       float e = expf(src[i * sliceSize + j] - max_);
      |                 ^
main.cpp:137:9: error: use of undeclared identifier 'fabsf'
  137 |     if (fabsf(output_cpu[i] - output_gpu[i]) > 1e-3) {
      |         ^
2 errors generated.
make: *** [Makefile:71: main.o] Error 1
